--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <h1>Quick Draw
 <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
   </h1>
-  <p id="GuessedSketchName">Your Sketch: </p>
+  <p id="your_sketch">Your Sketch: </p>
   <p id="confidence">Confidence: </p>
-  <p id="sketch_suggestion">Sketch To Be Drawn: </p>
+  <p id="sketch_to_be_drawn">Sketch To Be Drawn: </p>
 </center>
 <span id="score">Score: </span>
 <span id="timer">Timer: </span> 
